# multi-agent

./: Dockerfile  agent.yaml  pyproject.toml  run.sh  run_web.sh
common/client/: card_resolver.py
multi_agent/: agent.py  host_agent.py  main.py
