[project]
name = "multi-agent"
version = "0.1.0"
description = "Host agent that can communicate with other agents over the A2A protocol. (Google ADK-based)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.9.0",
    "google-adk>=0.2.0",
    "a2a-server>=0.1.0",
    "litellm>=1.67.0",
    "python-dotenv>=1.1.0",
]


